2014-01-23  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-puthash, bbdb-record-set-xfield)
	(bbdb-record-set-field, bbdb-parse-records, bbdb-change-record):
	Bugfix, make 'eq the 4th arg of add-to-list.

2014-01-23  Stefan Monnier <monnier@iro.umontreal.ca>
	* lisp/bbdb.el (bbdb-read-string): In
	minibuffer-local-completion-map remove the binding of SPC to
	minibuffer-complete-word and of ? to minibuffer-completion-help.

2014-01-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-pop-up-window-simple): New function.
	(bbdb-pop-up-window): Use it.  Make sure the *BBDB* buffer exists.
	Use display-buffer as an alternative to pop-up-buffer if the
	*BBDB* buffer is not selected.  Use the tallest window even if
	bbdb-pop-up-window-size is 1.0.
	(bbdb-pop-up-window-size): Fix docstring accordingly.
	* lisp/bbdb-com.el (bbdb-complete-mail-cleanup): Do not call
	bbdb-pop-up-window before we created for sure the *BBDB* buffer.

2014-01-12  Roland Winkler  <winkler@gnu.org>
	Provide auto completion for streets and postcodes known to BBDB.
	* lisp/bbdb.el (bbdb-street-list, bbdb-postcode-list): New
	internal variables.
	(bbdb-record-set-xfield, bbdb-parse-records)
	* lisp/bbdb-com.el (bbdb-record-edit-address)
	(bbdb-edit-address-default): Use them.

2014-01-08  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-canonical-hosts, bbdb-canonicalize-mail-1)
	(bbdb-message-clean-name-default): Move here from bbdb-mua.el.

2014-01-08  Roland Winkler  <winkler@gnu.org>
	Provide auto completion for cities, states and countries known to
	BBDB.
	* lisp/bbdb.el (bbdb-city-list, bbdb-state-list)
	(bbdb-country-list): New internal variables.
	(bbdb-add-to-list): New function.
	(bbdb-puthash, bbdb-merge-concat-remove-duplicates)
	(bbdb-change-record): Use add-to-list.
	(bbdb-record-set-xfield, bbdb-parse-records): Use add-to-list and
	bbdb-add-to-list.  Collect cities, states and countries known to
	BBDB.
	* lisp/bbdb-com.el (bbdb-record-edit-address)